Fix overflow progress

--- a/src/app/shared/progress/progress-bar/progress-bar.component.scss
+++ b/src/app/shared/progress/progress-bar/progress-bar.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   border-radius: 5px;
+  overflow: hidden;
   width: 100%;
   display: block;
   background: $gray-400;
